# efb-qq-plugin-go-cqhttp

./: README.md  README.rst  pyproject.toml
efb_qq_plugin_go_cqhttp/: GoCQHttp.py  MsgDecorator.py  OICQHttp.py  Utils.py
efb_qq_plugin_oicqhttp/: MsgDecorator.py  OICQHttp.py  Utils.py  __init__.py
