[project]
name = "efb-qq-plugin-oicqhttp"
description = "EQS plugin for oicqhttp API Compatible Client."
authors = [{ name = "XYenon", email = "i@xyenon.bid" }]
dependencies = [
    "efb-qq-slave @ git+https://github.com/milkice233/efb-qq-slave@master",
    "ehforwarderbot~=2.1.1",
    "PyYAML~=6.0",
    "requests~=2.27.1",
    "python-magic~=0.4.25",
    "Pillow~=9.0.1",
    "aiocqhttp~=1.4.3",
    "quart~=0.17.0",
    "hypercorn~=0.13.2",
    "pilk~=0.0.2",
    "pydub~=0.25.1",
]
requires-python = ">=3.7"
license = { text = "AGPL-3.0-only" }
readme = "README.rst"
keywords = [
    "ehforwarderbot",
    "EH Forwarder Bot",
    "EH Forwarder Bot Slave Channel",
    "qq",
    "chatbot",
    "EQS",
    "CoolQ",
    "oicq",
    "cqhttp"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Chat",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/youxam/efb-qq-plugin-oicqhttp"

[project.entry-points."ehforwarderbot.qq.plugin"]
OICQHttp = "efb_qq_plugin_oicqhttp:OICQHttp"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
version = { from = "efb_qq_plugin_oicqhttp/__init__.py" }

[tool.pdm.dev-dependencies]
dev = ["efb-telegram-master~=2.2.4"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
atomic = true
filter_files = true
